--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/tech_home.css" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +14,7 @@
         <div class="loading-spinner"></div>
     </div>
     <nav style="background-color: #464646 !important" class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <img style="width: 80px;" src="images/omni_logo.png" />
+        <img style="width: 80px;" src="omni.png" />
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,7 +38,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img style="width: 32px;" src="images/user.png" />
+                        <img style="width: 32px;" src="profile_icon.png" />
                         <span style="font-weight: bold;" id="userName"></span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
