--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="padding-top: 130px;">
 
     <div id="loadingContainer" class="loading-screen">
         <div class="loading-spinner"></div>
