--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <p>İstanbul sizi bekliyor. Kararın?</p>
             
             <div class="btn-group">
-                <button class="btn btn-yes" onclick="celebrate()">Evet, Geliyoruz! 🥂</button>
+                <button class="btn btn-yes" onclick="celebrate()">Tamam bir ara geliriz! 🥂</button>
                 
                 <button class="btn btn-no" id="noBtn" 
                     ontouchstart="kac(this)" 
